--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container"></div>
     <script src="script.js"></script>
   </body>
 </html>
